Fix /get_call_orders (resolve #23).
